--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,13 @@
 ---
 title: "About"
+about:
+  links: 
+    - icon: twitter
+      text: Twitter
+      href: https://twitter.com/timonscheuer
 ---
+
+
 
 About this site
 
